<LinearLayout android:id="@+id/boxParent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <LinearLayout android:id="@+id/boxMemory"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="horizontal">

        <TextView android:id="@+id/Memory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/GRAY_M11"
            android:textColor="@color/GRAY_M07"
            android:textSize="@dimen/activity_text_small"
            android:gravity="start"
            android:text="@string/m_memory"
            android:padding="@dimen/activity_text_padding"
            android:layout_margin="@dimen/activity_object_margin"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/boxDisplayParent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <TextView android:id="@+id/Operator"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/GRAY_M11"
            android:textColor="@color/GRAY_M01"
            android:textSize="@dimen/activity_text_medium"
            android:text="@string/m_operator"
            android:gravity="center|end"
            android:layout_marginLeft="@dimen/activity_object_margin"
            android:layout_marginTop="@dimen/activity_object_margin"
            android:layout_marginBottom="@dimen/activity_object_margin" />

        <TextView android:id="@+id/Display"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:background="@color/GRAY_M11"
            android:textColor="@color/GRAY_M01"
            android:textSize="@dimen/activity_text_medium"
            android:text="@string/m_display"
            android:gravity="center|end"
            android:padding="@dimen/activity_text_padding"
            android:layout_marginTop="@dimen/activity_object_margin"
            android:layout_marginRight="@dimen/activity_object_margin"
            android:layout_marginBottom="@dimen/activity_object_margin" />
    </LinearLayout>

    <LinearLayout android:id="@+id/boxCommandsChild"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button android:id="@+id/btReset"
            style="@style/buttons_style"
            android:background="@color/GRAY_M03"
            android:textSize="@dimen/activity_text_small"
            android:text="@string/m_reset" />
        <Button android:id="@+id/btBack"
            style="@style/buttons_style"
            android:background="@color/GRAY_M03"
            android:textSize="@dimen/activity_text_small"
            android:text="@string/m_back" />
    </LinearLayout>

    <LinearLayout android:id="@+id/boxN7"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <Button android:id="@+id/bt07"
            style="@style/buttons_style"
            android:text="@string/m_07"
            android:background="@color/GRAY_M01" />
        <Button android:id="@+id/bt08"
            style="@style/buttons_style"
            android:text="@string/m_08"
            android:background="@color/GRAY_M01" />
        <Button android:id="@+id/bt09"
            style="@style/buttons_style"
            android:text="@string/m_09"
            android:background="@color/GRAY_M01" />
        <Button android:id="@+id/btDiv"
            style="@style/buttons_style"
            android:text="@string/m_Div"
            android:background="@color/ORANGE_H04" />
    </LinearLayout>

    <LinearLayout android:id="@+id/boxN4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <Button android:id="@+id/bt04"
            style="@style/buttons_style"
            android:text="@string/m_04"
            android:background="@color/GRAY_M01" />
        <Button android:id="@+id/bt05"
            style="@style/buttons_style"
            android:text="@string/m_05"
            android:background="@color/GRAY_M01" />
        <Button android:id="@+id/bt06"
            style="@style/buttons_style"
            android:text="@string/m_06"
            android:background="@color/GRAY_M01" />
        <Button android:id="@+id/btMul"
            style="@style/buttons_style"
            android:text="@string/m_Mul"
            android:background="@color/ORANGE_H04" />
    </LinearLayout>

    <LinearLayout android:id="@+id/boxN1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <Button android:id="@+id/bt01"
            style="@style/buttons_style"
            android:text="@string/m_01"
            android:background="@color/GRAY_M01" />
        <Button android:id="@+id/bt02"
            style="@style/buttons_style"
            android:text="@string/m_02"
            android:background="@color/GRAY_M01" />
        <Button android:id="@+id/bt03"
            style="@style/buttons_style"
            android:text="@string/m_03"
            android:background="@color/GRAY_M01" />
        <Button android:id="@+id/btSub"
            style="@style/buttons_style"
            android:text="@string/m_Sub"
            android:background="@color/ORANGE_H04" />
    </LinearLayout>

    <LinearLayout android:id="@+id/boxN0"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <Button android:id="@+id/bt00"
            style="@style/buttons_style"
            android:text="@string/m_00"
            android:background="@color/GRAY_M01" />
        <Button android:id="@+id/btDec"
            style="@style/buttons_style"
            android:text="@string/m_Dec"
            android:background="@color/GRAY_M01" />
        <Button android:id="@+id/btResult"
            style="@style/buttons_style"
            android:text="@string/m_Result"
            android:background="@color/ORANGE_H08"/>
        <Button android:id="@+id/btSum"
            style="@style/buttons_style"
            android:text="@string/m_Sum"
            android:background="@color/ORANGE_H04" />
    </LinearLayout>
</LinearLayout>